RESOLVED FIXED186677
REGRESSION (r232799): Form controls are blank in dark mode
https://bugs.webkit.org/show_bug.cgi?id=186677
Summary REGRESSION (r232799): Form controls are blank in dark mode
Timothy Hatcher
Reported 2018-06-15 10:09:02 PDT
After fixing bug 186597, the controls in dark mode stopped rendering.
Attachments
Bug (343.21 KB, image/png)
2018-06-15 10:09 PDT, Timothy Hatcher
no flags
Patch (2.16 KB, patch)
2018-06-15 10:12 PDT, Timothy Hatcher
no flags
With Patch (347.40 KB, image/png)
2018-06-15 10:15 PDT, Timothy Hatcher
no flags
Radar WebKit Bug Importer
Comment 1 2018-06-15 10:09:16 PDT
Timothy Hatcher
Comment 2 2018-06-15 10:09:17 PDT
Timothy Hatcher
Comment 3 2018-06-15 10:12:37 PDT
Wenson Hsieh
Comment 4 2018-06-15 10:13:36 PDT
Comment on attachment 342823 [details] Patch Thanks for catching this!
Timothy Hatcher
Comment 5 2018-06-15 10:15:35 PDT
Created attachment 342824 [details] With Patch
WebKit Commit Bot
Comment 6 2018-06-15 10:33:00 PDT
Comment on attachment 342823 [details] Patch Clearing flags on attachment: 342823 Committed r232880: <https://trac.webkit.org/changeset/232880>
WebKit Commit Bot
Comment 7 2018-06-15 10:33:02 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 8 2018-06-15 22:13:53 PDT
Comment on attachment 342823 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=342823&action=review > Source/WebCore/ChangeLog:13 > + Dark mode controls don't have borders, just a semi-transparent background of shadows. > + In the dark mode case we can't disable borders, or we will not paint anything for the control. How do we regression test such things?
Note You need to log in before you can comment on or make changes to this bug.