REGRESSION (r232799): Form controls are blank in dark mode.

https://bugs.webkit.org/show_bug.cgi?id=186677
rdar://problem/41162899

Reviewed by Wenson Hsieh.

* rendering/RenderThemeMac.mm:
(-[WebCoreTextFieldCell _adjustedCoreUIDrawOptionsForDrawingBordersOnly:]):
Dark mode controls don't have borders, just a semi-transparent background of shadows.
In the dark mode case we can't disable borders, or we will not paint anything for the control.


Canonical link: https://commits.webkit.org/201985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232880 268f45cc-cd09-0410-ab3c-d52691b4dbfc